<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".MainActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient1"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ExamAlterationHelper"
            android:fontFamily="sans-serif-light"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:id="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            android:visibility="invisible"
            />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Login"-->
            <!--android:fontFamily="sans-serif-light"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="30sp"-->
            <!--android:id="@+id/Login_text"-->
            <!--android:layout_below="@+id/app_name"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:paddingTop="30dp"-->
            <!--/>-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_clipart_24dp"
            android:layout_below="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#694129"
            android:id="@+id/login_clipart"
            />
        <!--<com.airbnb.lottie.LottieAnimationView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:id="@+id/login_animation"-->
            <!--app:lottie_loop="true"-->
            <!--app:lottie_fileName="login_animation.json"-->
            <!--android:layout_below="@+id/app_name"-->
            <!--app:lottie_autoPlay="true"-->
            <!--/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username_text"
            android:layout_below="@+id/login_clipart"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:text="Username"
            android:textColor="#000000"
            android:textSize="15sp"
            android:fontFamily="serif"


            />
        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_below="@+id/username_text"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_text"
            android:layout_below="@+id/username_input"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:textColor="#000000"
            android:text="Password"
            android:textSize="15sp"
            android:fontFamily="serif"/>
        <EditText
            android:id="@+id/password_input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_below="@+id/password_text"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            />

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textPassword"-->
                <!--android:layout_marginRight="25dp"-->
                <!--android:layout_marginLeft="25dp"-->
                <!--android:id="@+id/password_input"-->

                <!--/>-->


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember Me"
            android:layout_below="@+id/password_input1"
            android:layout_marginLeft="25dp"
            android:id="@+id/checkbox"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_below="@+id/checkbox"
            android:text="Login"
            android:textColor="#ffffff"
            android:backgroundTint="#543939"
            android:onClick="Login"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:onClick="forgot_password"
            android:textColor="#000000"
            android:id="@+id/forgot_password"
            android:layout_below="@+id/login"
            android:layout_marginBottom="35dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    </ScrollView>