...
    android:background="@drawable/gradient1"
    tools:context=".received_requests">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REQUESTS RECIEVED"
        android:textSize="20dp"
        android:id="@+id/req_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/req_title"
        android:paddingTop="20dp"
...
