<resources>
    <string name="app_name">ExamAlterationHelper</string>
    <string name="title_activity_admin_page">admin_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin_pg">admin_pg</string>
    <string-array name="dates_array">
        <item>14-10-2019</item>
        <item>15-10-2019</item>
        <item>16-10-2019</item>
        <item>17-10-2019</item>
        <item>18-10-2019</item>
        <item>19-10-2019</item>
        <item>20-10-2019</item>
        <item>21-10-2019</item>
    </string-array>
</resources>
