...
    tools:context=".register_fac">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/register_clipart_24dp"
        android:id="@+id/register_clipart"
        android:layout_centerHorizontal="true"
        />

    <!--<android.support.v7.widget.CardView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
...
